Preventing images from overlapping

--- a/src/styles/blocks/device.scss
+++ b/src/styles/blocks/device.scss
@@ -11,7 +11,7 @@
     display: block;
     margin: 0 auto 32px;
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: transform 0.3s ease;
       cursor: pointer;
     }
