--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -19,6 +19,7 @@
     line-height: 18px;
     padding: 14px 16px 16px 14px;
     color: #292929;
+    margin-bottom: 16px;
 
     &__input:-webkit-autofill,
     &__input:-webkit-autofill:hover,
