--- a/src/styles/blocks/pictures.scss
+++ b/src/styles/blocks/pictures.scss
@@ -7,7 +7,7 @@
     position: relative;
     padding-top: 100%;
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: transform 0.3s ease;
       cursor: pointer;
     }
